@@ -8,6 +8,9 @@ Thanks to Thomas Alspaugh for contributing to this release.
 
 - Updated BibTeX and LaTeX syntax highlighting (Thomas Alspaugh).
 
+- The Buffer Options and Global Options->Editing panes no longer allow
+  setting the wrap mode to 'soft' with a wrap margin of zero.
+
 }}}
 {{{ Bug Fixes
 
